2010-01-28  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* src/gsad.c (request_handler): Simplified conditional.

2010-01-27  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* CMakeLists.txt: Updated version number.

	* src/html/src/about.htm4: Updated version number.

2010-01-27  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the gsa 1.0.0-beta3 release.

	* src/html/src/about.htm4: Updated version number.

	* CHANGES: Updated.

2010-01-27  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* README: Updated.

2010-01-27  Matthew Mundell <matthew.mundell@intevation.de>

	Add option to run in chroot.  Most of work by Felix Wolfsteller.

	* src/gsad.c (file_content_response): Make file path relative.
	(drop_privileges): New function.
	(main): Add option --do-chroot.  Change into the state directory
	before starting the HTTP daemon, so that all paths can be relative.
	If --do-chroot is given, chroot into the state dir and drop
	privileges.  Move PID file creation to come before the chroot.

	* src/gsad_base.c (XSL_PATH): Make relative.

2010-01-27  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* src/gsad.c (request_handler): Collapse two conditionals with
	identical body.

2010-01-27  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Basic input checking when serving files. Set content type for images.

	* src/gsad_base.h: Added new content type (text/css).

	* src/gsad.c (gsad_add_content_type_header): Added new text/css
	content type.
	(file_content_response): Set content type and disposition, check url
	parameter to not contain "..".
	(request_handler): Pass content type and disposition to
	file_content_response.

2010-01-27  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* src/gsad.c (create_http_authenticate_response): New, extracted from
	(send_http_authenticate_header).
	(file_content_response): New, extracted from request_handler