@@ -1,3 +1,9 @@
+2010-01-28  Matthew Mundell <matthew.mundell@intevation.de>
+
+	* src/gsad.c (file_content_response): Indent args.  Downcase @todos.
+	Move fopen return check for default_file into block that does fopen.
+	Add Expires and Cache-Control headers if path matches default_file.
+
 2010-01-28  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
 	* src/gsad.c (request_handler): Simplified conditional.
